tests/cases/functions/errors/function-param-pattern.ari
fn first((left, right): i64) -> i64 {
  return left;
}

fn main() -> i64 {
  return 0;
}
